# personal_assistent

./: CLAUDE.md  README.md  pyproject.toml
deploy/: Dockerfile  deploy.sh  docker-compose.yml
src/agent/: client.py
src/agent/protocols/: i_agent_client.py
src/chat/actions/: send_to_agent_action.py
src/chat/handlers/: clear_command_handler.py  text_message_handler.py
todos/: 003-agent-client.yaml  004-text-message-handler.yaml  005-entry-point.yaml  007-docker-deploy.yaml  013-parameterize-home-directory.yaml  014-docker-claude-volume-readonly.yaml  015-fix-local-path-in-pyproject.yaml  016-rewrite-git-history-ip.yaml
workers/bot/: __main__.py
