[project]
name = "personal-assistent"
version = "0.1.0"
description = "Telegram bot - personal assistant powered by Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bot-framework[all]==0.3.0",
    "claude-agent-sdk==0.1.32",
    "python-dotenv==1.2.1",
]

[dependency-groups]
dev = [
    "import-linter==2.10",
    "mypy==1.19.1",
    "pyright==1.1.408",
    "pytest==9.0.2",
    "ruff==0.15.0",
]

[tool.pyright]
venv = ".venv"
venvPath = "."
reportUnusedVariable = false
reportUnusedImport = false

[tool.ruff]
# https://docs.astral.sh/ruff/rules/
lint.select = [
  "F", # flake8
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "B", # flake8-bugbear
  "N", # Check your code against PEP 8 naming conventions.
  "C", # McCabe complexity.
  "T", # Print found todos.
  "UP",  # upgrade syntax for newer versions of the language.
  "ANN", # Check for missing type annotations
  "S",   # Check for security issues
  "DTZ", # Check for datetime timezone issues
]

lint.ignore = [
  "ANN204", # Missing type annotation for special methods like __init__ etc.
  "E501", # line too long
  "C901",   # function is too complex
  "ANN401", # Useless variable
  "W293",   # blank line contains whitespace
  "W291",   # trailing whitespace
]

[tool.ruff.lint.per-file-ignores]
"test*" = [
  "S101",   # disable security issues for tests
  "ANN201", # Missing type annotation for test function
]

[tool.ruff.format]
# https://docs.astral.sh/ruff/settings/#format_skip-magic-trailing-comma
skip-magic-trailing-comma = false

[tool.mypy]
ignore_missing_imports = true

strict = false
disallow_subclassing_any = true
warn_unused_ignores = false
warn_redundant_casts = true
check_untyped_defs = true
disallow_untyped_decorators = true

# Дополнительные настройки
disallow_any_generics = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false

plugins = []

show_error_codes = true

# =============================================================================
# Import Linter
# =============================================================================
[tool.importlinter]
root_packages = ["src", "workers"]

# Глобальные слои: workers -> src
[[tool.importlinter.contracts]]
name = "Global layers"
type = "layers"
layers = ["workers", "src"]

# src layers
[[tool.importlinter.contracts]]
name = "src layers"
type = "layers"
layers = ["src.chat", "src.agent"]

[tool.uv.sources]
bot-framework = { path = "/home/sumarokov/projects/bot_framework", editable = true }
